# HRS_ST3AL

./: .gitignore  README.md  imitation.sh  imitation_short.sh
bags/magic_shit/: metadata.yaml
bags/new/ainex_04_standing/: metadata.yaml
bags/new/onehanded_stacking1/: metadata.yaml
bags/new/onehanded_stacking2/: metadata.yaml
bags/new/onehanded_stacking_adv/: metadata.yaml
bags/new/onehanded_stacking_closeup/: metadata.yaml
bags/new/pose3_stacking/: metadata.yaml
bags/new/pose4_armreach/: metadata.yaml
bags/new/pose5_arms/: metadata.yaml
bags/new/pose6_torso/: metadata.yaml
bags/pose1/: metadata.yaml
bags/pose2/: metadata.yaml
bags/pose3/: metadata.yaml
bags/pose4/: metadata.yaml
bags/pose5/: metadata.yaml
bags/stacking_unstacking/: metadata.yaml
bags/threeblocks/: metadata.yaml
camera_parameters/: calibration.yaml  distortion_coeff.npy  mapping_x.npy  mapping_y.npy  new_camera_matrix.npy  old_camera_matrix.npy  roi.npy
src/ainex_controller/: package.xml  setup.cfg  setup.py
src/ainex_description/: CMakeLists.txt  package.xml
src/ainex_description/launch/: display.launch.py
src/ainex_description/rviz/: ainex.rviz
src/ainex_description/urdf/: ainex.urdf  ainex.urdf.xacro
src/ainex_interfaces/: CMakeLists.txt  package.xml
src/ainex_motion/: setup.py
src/ainex_seq_model/: package.xml  setup.cfg  setup.py
src/bringup/: package.xml  setup.py
src/main_pkg/: package.xml  setup.py
src/vision/: package.xml  setup.py
vision/: setup.py
vision/config/: calibration.yaml
vision/vision/: camera_sub.py
(+80 files in other folders)
